--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
             npm install --no-fund --no-audit
           fi
       - run: npm run build
-      - run: cp dist/index.html dist/404.html
+      - run: cp dist/index.html dist/404.html  # fallback SPA
       - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
@@ -42,6 +42,10 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - id: deployment
+        uses: actions/deploy-pages@v4
+
     steps:
       - id: deployment
         uses: actions/deploy-pages@v4
