--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,9 +30,12 @@ jobs:
           else
             npm install --no-fund --no-audit
           fi
-      - run: npm run build
-      - run: cp dist/index.html dist/404.html  # fallback SPA
-      - uses: actions/upload-pages-artifact@v3
+      - name: Build
+        run: npm run build
+      - name: SPA fallback (404)
+        run: cp dist/index.html dist/404.html
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: dist
 
@@ -41,9 +44,10 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.deploy.outputs.page_url }}
     steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
+        id: deploy
         uses: actions/deploy-pages@v4
 
     steps:
