--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: true
 
 jobs:
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: npm
       - name: Install deps
         run: |
           if [ -f package-lock.json ]; then
@@ -33,7 +33,7 @@ jobs:
       - name: Build
         run: npm run build
       - name: SPA fallback (404)
-        run: cp dist/index.html dist/404.html
+        run: cp dist/index.html dist/404.html || true
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -44,12 +44,8 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deploy.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Deploy to GitHub Pages
-        id: deploy
-        uses: actions/deploy-pages@v4
-
-    steps:
-      - id: deployment
+        id: deployment
         uses: actions/deploy-pages@v4
