--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://jonat.github.io/pv-event-toolkit/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist -t true"
+    "deploy": "vite build && gh-pages -d dist -t true",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
+    "test": "vitest run"
+  },
+  "engines": {
+    "node": ">=18.18"
   },
   "dependencies": {
     "framer-motion": "^11.0.0",
